@@ -7,6 +7,8 @@
 	handle non-readable triangles.
 	* src/org/jcae/viewer3d/bg/ViewableBG.java: New highlight()
 	method.
+	* src/org/jcae/viewer3d/OEMMBehavior.java: Many changes to implement
+	LOD with 2 levels (fine and coarse meshes).
 
 2007-07-16 11:43  Jerome Robert <jeromerobert@users.sourceforge.net>
 
